separando responsabilidade do card-service